--- a/src/styles/weatherAppContainer.scss
+++ b/src/styles/weatherAppContainer.scss
@@ -103,6 +103,12 @@ body {
         color: white;
         font-family: Montserat;
       }
+      .app-error {
+        text-align: center;
+        color: white;
+        font-size: 2rem;
+        font-family: Montserat;
+      }
     }
   }
 
@@ -187,6 +193,13 @@ body {
         @include display-flex-center;
         font-size: 1.2rem;
         color: white;
+        font-family: Montserat;
+      }
+
+      .app-error {
+        text-align: center;
+        color: white;
+        font-size: 1.2rem;
         font-family: Montserat;
       }
     }
